Ensure that the images don't get too big.
This is problematic for a few reasons, and CSS-based image scaling is
usually frowned upon, but I'm not sure of any way to do this en-masse
without going through every single image and picking a smaller one
from Flickr.

Perhaps later.

--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,8 @@ header a {
     -moz-border-image: url(/img/frame.png) 55 45 45 45 round;
     border-image: url(/img/frame.png) 55 45 45 45 round;
     border-width: 50px;
-    width: 500px;
+    max-width:500px;
+    max-height:450px;
 }
 
 .download {
